--- a/libraries/RTC/library.properties
+++ b/libraries/RTC/library.properties
@@ -1,4 +1,4 @@
-name=I2C.01.EEPROM
+name=I2C.02.RTC
 version=1.0.0
 author=hceng 
 maintainer=thisway_diy <weidongshan@qq.com>
@@ -7,4 +7,4 @@ paragraph=Read and write EEPROM for 100ask_am335x board.
 category=Data Storage
 url=http://wiki.100ask.org/Mainpage
 architectures=*
-includes=eeprom.h
+includes=rtc.h
